# DOOM

ESP32/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
ESP32/components/doom/: CMakeLists.txt
ESP32/main/: CMakeLists.txt  i_net.c  i_video.c
ESP32/main/platform/: platform_fs.c  platform_fs.h  platform_input.c  platform_input.h  platform_lcd.c  platform_lcd.h  platform_time.c  platform_time.h
ESP32/src/: CMakeLists.txt  app_main.c  i_sound.c  i_video.c
ESP32/src/platform/: platform_fs.h  platform_input.c  platform_lcd.c
linuxdoom-1.10/: i_net.c  i_sound.c  i_system.c  i_video.c  w_wad.c
